# atmosphere

./: .gitignore  INSIGHTS.md  README.md  atmosphere_spec.md  concept_report_v0.2.md  pyproject.toml
atmosphere/: __init__.py  config.py  geo.py  stages.py  viz.py
atmosphere/retrieval/: __init__.py  buildings.py  mapillary.py
scripts/: visualize_neighborhood.py
tests/: test_buildings.py  test_geo.py  test_mapillary.py  test_stages.py
