[project]
name = "atmosphere"
version = "0.1.0"
description = "Research system for anchored world model generation via spatial retrieval"
authors = [{ name = "Maxime Zhu" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Geo / spatial
    "pymap3d>=3.1.0",           # WGS84 <-> ENU coordinate conversions
    "pyproj>=3.6.0",            # general-purpose projection utilities (used sparingly)
    "shapely>=2.0.0",           # 2D geometric operations on polygons
    "geopandas>=0.14.0",        # geographic dataframes (OSM/LoD2 handling)
    "osmnx>=2.0.0",             # OpenStreetMap data via Overpass API
    "rasterio>=1.3.0",          # reading DEM GeoTIFF files
    "requests>=2.31.0",         # Mapillary API HTTP client

    # Numerics
    "numpy>=1.26.0",
    "scipy>=1.11.0",

    # Utilities
    "pydantic>=2.5.0",          # validated data classes (for SCP schema later)
    "tqdm>=4.66.0",             # progress bars for batch fetches
    "python-dotenv>=1.0.0",     # load Mapillary API token from .env
    "rich>=13.7.0",             # prettier CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",              # linter + formatter (replaces flake8/black)
    "mypy>=1.8.0",              # static type checking
]

# Phase 2+ dependencies (vision, generation) will be added in separate optional groups
# when we need them, to keep the Phase 0 install light.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Reasonable defaults. Loosen/tighten as the codebase grows.
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"