[project]
name = "atmosphere"
version = "0.1.0"
description = "Research system for anchored world model generation via spatial retrieval"
authors = [{ name = "Maxime Zhu" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Geo / spatial
    "pymap3d>=3.1.0",           # WGS84 <-> ENU coordinate conversions
    "pyproj>=3.6.0",            # general-purpose projection utilities
    "shapely>=2.0.0",           # 2D geometric operations on polygons
    "geopandas>=0.14.0",        # geographic dataframes (used internally by retrieval)
    "osmnx>=2.0.0",             # OpenStreetMap data via Overpass API
    "rasterio>=1.3.0",          # reading DEM GeoTIFF files (Day 3+)
    "requests>=2.31.0",         # Mapillary API HTTP client (Day 4)

    # Numerics
    "numpy>=1.26.0",
    "scipy>=1.11.0",

    # Visualization
    "matplotlib>=3.8.0",        # 2D plotting

    # Utilities
    "pydantic>=2.5.0",          # validated data classes (used later in SCP schema)
    "tqdm>=4.66.0",             # progress bars for batch fetches
    "python-dotenv>=1.0.0",     # load API tokens from .env
    "rich>=13.7.0",             # prettier CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",              # linter + formatter
    "mypy>=1.8.0",              # static type checking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atmosphere"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"